// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collectDecorations 特征化（拆分护栏） > 光标在 callout 内 1`] = `
[
  "{"kind":"bold","from":64,"to":72,"revealed":false}",
  "{"kind":"codeBlock","from":369,"to":390,"revealed":false,"info":"js","source":"const x = 1"}",
  "{"kind":"footnoteRef","from":328,"to":333,"revealed":false,"info":"footnote definition","source":"fn"}",
  "{"kind":"headingLine","from":31,"to":31,"revealed":false,"level":1}",
  "{"kind":"hide","from":108,"to":109,"revealed":false}",
  "{"kind":"hide","from":111,"to":113,"revealed":false}",
  "{"kind":"hide","from":117,"to":119,"revealed":false}",
  "{"kind":"hide","from":127,"to":128,"revealed":false}",
  "{"kind":"hide","from":147,"to":148,"revealed":true}",
  "{"kind":"hide","from":149,"to":150,"revealed":false}",
  "{"kind":"hide","from":155,"to":156,"revealed":false}",
  "{"kind":"hide","from":171,"to":172,"revealed":true}",
  "{"kind":"hide","from":187,"to":188,"revealed":false}",
  "{"kind":"hide","from":187,"to":189,"revealed":false}",
  "{"kind":"hide","from":203,"to":204,"revealed":false}",
  "{"kind":"hide","from":203,"to":205,"revealed":false}",
  "{"kind":"hide","from":222,"to":223,"revealed":false}",
  "{"kind":"hide","from":238,"to":240,"revealed":false}",
  "{"kind":"hide","from":247,"to":249,"revealed":false}",
  "{"kind":"hide","from":260,"to":261,"revealed":false}",
  "{"kind":"hide","from":265,"to":266,"revealed":false}",
  "{"kind":"hide","from":266,"to":267,"revealed":false}",
  "{"kind":"hide","from":267,"to":286,"revealed":false}",
  "{"kind":"hide","from":286,"to":287,"revealed":false}",
  "{"kind":"hide","from":293,"to":294,"revealed":false}",
  "{"kind":"hide","from":31,"to":33,"revealed":false}",
  "{"kind":"hide","from":311,"to":312,"revealed":false}",
  "{"kind":"hide","from":328,"to":329,"revealed":false}",
  "{"kind":"hide","from":332,"to":333,"revealed":false}",
  "{"kind":"hide","from":336,"to":337,"revealed":false}",
  "{"kind":"hide","from":340,"to":341,"revealed":false}",
  "{"kind":"hide","from":64,"to":66,"revealed":false}",
  "{"kind":"hide","from":70,"to":72,"revealed":false}",
  "{"kind":"hide","from":74,"to":75,"revealed":false}",
  "{"kind":"hide","from":81,"to":82,"revealed":false}",
  "{"kind":"hide","from":84,"to":86,"revealed":false}",
  "{"kind":"hide","from":92,"to":94,"revealed":false}",
  "{"kind":"hide","from":96,"to":97,"revealed":false}",
  "{"kind":"highlight","from":113,"to":117,"revealed":false}",
  "{"kind":"hr","from":364,"to":367,"revealed":false}",
  "{"kind":"image","from":423,"to":445,"revealed":false,"info":"standalone","source":"pic.png","title":"standalone","placement":"block"}",
  "{"kind":"image","from":454,"to":472,"revealed":false,"info":"img","source":"inline.png","title":"img","placement":"inline"}",
  "{"kind":"image","from":485,"to":492,"revealed":false,"info":"clip","source":"","title":"clip","placement":"inline"}",
  "{"kind":"inlineCode","from":96,"to":109,"revealed":false}",
  "{"kind":"italic","from":74,"to":82,"revealed":false}",
  "{"kind":"link","from":149,"to":156,"revealed":false}",
  "{"kind":"link","from":260,"to":287,"revealed":false}",
  "{"kind":"link","from":293,"to":312,"revealed":false}",
  "{"kind":"link","from":328,"to":333,"revealed":false}",
  "{"kind":"link","from":336,"to":341,"revealed":false}",
  "{"kind":"linkIcon","from":260,"to":260,"revealed":false,"info":"external"}",
  "{"kind":"listBullet","from":187,"to":188,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":203,"to":204,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":222,"to":223,"revealed":false,"level":0}",
  "{"kind":"listNumber","from":238,"to":240,"revealed":false,"level":0,"info":"1"}",
  "{"kind":"listNumber","from":247,"to":249,"revealed":false,"level":0,"info":"2"}",
  "{"kind":"mathBlock","from":510,"to":524,"revealed":false,"source":"E = mc^2"}",
  "{"kind":"mathInline","from":538,"to":543,"revealed":false,"source":"a+b"}",
  "{"kind":"media","from":485,"to":508,"revealed":false,"info":"clip","source":"clip.mp4","width":320,"title":"clip"}",
  "{"kind":"properties","from":0,"to":29,"revealed":false,"source":"---\\ntitle: Doc\\ntags: a, b\\n---"}",
  "{"kind":"quoteLine","from":127,"to":127,"revealed":false}",
  "{"kind":"quoteLine","from":147,"to":147,"revealed":false}",
  "{"kind":"quoteLine","from":171,"to":171,"revealed":false}",
  "{"kind":"strike","from":84,"to":94,"revealed":false}",
  "{"kind":"table","from":392,"to":421,"revealed":false,"source":"| a | b |\\n| - | - |\\n| 1 | 2 |"}",
  "{"kind":"task","from":189,"to":192,"revealed":false,"checked":true}",
  "{"kind":"task","from":205,"to":208,"revealed":false,"checked":false}",
  "{"kind":"taskDoneText","from":193,"to":202,"revealed":false}",
  "{"kind":"wikiLink","from":292,"to":313,"revealed":false,"info":"Wiki Target","source":"shown"}",
]
`;

exports[`collectDecorations 特征化（拆分护栏） > 光标在 frontmatter 内 1`] = `
[
  "{"kind":"bold","from":64,"to":72,"revealed":false}",
  "{"kind":"callout","from":147,"to":185,"revealed":false,"info":"note","source":"callout body","title":"Callout title","folded":false}",
  "{"kind":"codeBlock","from":369,"to":390,"revealed":false,"info":"js","source":"const x = 1"}",
  "{"kind":"footnoteRef","from":328,"to":333,"revealed":false,"info":"footnote definition","source":"fn"}",
  "{"kind":"frontmatter","from":0,"to":0,"revealed":true}",
  "{"kind":"frontmatter","from":15,"to":15,"revealed":true}",
  "{"kind":"frontmatter","from":26,"to":26,"revealed":true}",
  "{"kind":"frontmatter","from":4,"to":4,"revealed":true}",
  "{"kind":"headingLine","from":31,"to":31,"revealed":false,"level":1}",
  "{"kind":"hide","from":108,"to":109,"revealed":false}",
  "{"kind":"hide","from":111,"to":113,"revealed":false}",
  "{"kind":"hide","from":117,"to":119,"revealed":false}",
  "{"kind":"hide","from":127,"to":128,"revealed":false}",
  "{"kind":"hide","from":187,"to":188,"revealed":false}",
  "{"kind":"hide","from":187,"to":189,"revealed":false}",
  "{"kind":"hide","from":203,"to":204,"revealed":false}",
  "{"kind":"hide","from":203,"to":205,"revealed":false}",
  "{"kind":"hide","from":222,"to":223,"revealed":false}",
  "{"kind":"hide","from":238,"to":240,"revealed":false}",
  "{"kind":"hide","from":247,"to":249,"revealed":false}",
  "{"kind":"hide","from":260,"to":261,"revealed":false}",
  "{"kind":"hide","from":265,"to":266,"revealed":false}",
  "{"kind":"hide","from":266,"to":267,"revealed":false}",
  "{"kind":"hide","from":267,"to":286,"revealed":false}",
  "{"kind":"hide","from":286,"to":287,"revealed":false}",
  "{"kind":"hide","from":293,"to":294,"revealed":false}",
  "{"kind":"hide","from":31,"to":33,"revealed":false}",
  "{"kind":"hide","from":311,"to":312,"revealed":false}",
  "{"kind":"hide","from":328,"to":329,"revealed":false}",
  "{"kind":"hide","from":332,"to":333,"revealed":false}",
  "{"kind":"hide","from":336,"to":337,"revealed":false}",
  "{"kind":"hide","from":340,"to":341,"revealed":false}",
  "{"kind":"hide","from":64,"to":66,"revealed":false}",
  "{"kind":"hide","from":70,"to":72,"revealed":false}",
  "{"kind":"hide","from":74,"to":75,"revealed":false}",
  "{"kind":"hide","from":81,"to":82,"revealed":false}",
  "{"kind":"hide","from":84,"to":86,"revealed":false}",
  "{"kind":"hide","from":92,"to":94,"revealed":false}",
  "{"kind":"hide","from":96,"to":97,"revealed":false}",
  "{"kind":"highlight","from":113,"to":117,"revealed":false}",
  "{"kind":"hr","from":364,"to":367,"revealed":false}",
  "{"kind":"image","from":423,"to":445,"revealed":false,"info":"standalone","source":"pic.png","title":"standalone","placement":"block"}",
  "{"kind":"image","from":454,"to":472,"revealed":false,"info":"img","source":"inline.png","title":"img","placement":"inline"}",
  "{"kind":"image","from":485,"to":492,"revealed":false,"info":"clip","source":"","title":"clip","placement":"inline"}",
  "{"kind":"inlineCode","from":96,"to":109,"revealed":false}",
  "{"kind":"italic","from":74,"to":82,"revealed":false}",
  "{"kind":"link","from":260,"to":287,"revealed":false}",
  "{"kind":"link","from":293,"to":312,"revealed":false}",
  "{"kind":"link","from":328,"to":333,"revealed":false}",
  "{"kind":"link","from":336,"to":341,"revealed":false}",
  "{"kind":"linkIcon","from":260,"to":260,"revealed":false,"info":"external"}",
  "{"kind":"listBullet","from":187,"to":188,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":203,"to":204,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":222,"to":223,"revealed":false,"level":0}",
  "{"kind":"listNumber","from":238,"to":240,"revealed":false,"level":0,"info":"1"}",
  "{"kind":"listNumber","from":247,"to":249,"revealed":false,"level":0,"info":"2"}",
  "{"kind":"mathBlock","from":510,"to":524,"revealed":false,"source":"E = mc^2"}",
  "{"kind":"mathInline","from":538,"to":543,"revealed":false,"source":"a+b"}",
  "{"kind":"media","from":485,"to":508,"revealed":false,"info":"clip","source":"clip.mp4","width":320,"title":"clip"}",
  "{"kind":"quoteLine","from":127,"to":127,"revealed":false}",
  "{"kind":"strike","from":84,"to":94,"revealed":false}",
  "{"kind":"table","from":392,"to":421,"revealed":false,"source":"| a | b |\\n| - | - |\\n| 1 | 2 |"}",
  "{"kind":"task","from":189,"to":192,"revealed":false,"checked":true}",
  "{"kind":"task","from":205,"to":208,"revealed":false,"checked":false}",
  "{"kind":"taskDoneText","from":193,"to":202,"revealed":false}",
  "{"kind":"wikiLink","from":292,"to":313,"revealed":false,"info":"Wiki Target","source":"shown"}",
]
`;

exports[`collectDecorations 特征化（拆分护栏） > 光标在 standalone 图片行 1`] = `
[
  "{"kind":"bold","from":64,"to":72,"revealed":false}",
  "{"kind":"callout","from":147,"to":185,"revealed":false,"info":"note","source":"callout body","title":"Callout title","folded":false}",
  "{"kind":"codeBlock","from":369,"to":390,"revealed":false,"info":"js","source":"const x = 1"}",
  "{"kind":"footnoteRef","from":328,"to":333,"revealed":false,"info":"footnote definition","source":"fn"}",
  "{"kind":"headingLine","from":31,"to":31,"revealed":false,"level":1}",
  "{"kind":"hide","from":108,"to":109,"revealed":false}",
  "{"kind":"hide","from":111,"to":113,"revealed":false}",
  "{"kind":"hide","from":117,"to":119,"revealed":false}",
  "{"kind":"hide","from":127,"to":128,"revealed":false}",
  "{"kind":"hide","from":187,"to":188,"revealed":false}",
  "{"kind":"hide","from":187,"to":189,"revealed":false}",
  "{"kind":"hide","from":203,"to":204,"revealed":false}",
  "{"kind":"hide","from":203,"to":205,"revealed":false}",
  "{"kind":"hide","from":222,"to":223,"revealed":false}",
  "{"kind":"hide","from":238,"to":240,"revealed":false}",
  "{"kind":"hide","from":247,"to":249,"revealed":false}",
  "{"kind":"hide","from":260,"to":261,"revealed":false}",
  "{"kind":"hide","from":265,"to":266,"revealed":false}",
  "{"kind":"hide","from":266,"to":267,"revealed":false}",
  "{"kind":"hide","from":267,"to":286,"revealed":false}",
  "{"kind":"hide","from":286,"to":287,"revealed":false}",
  "{"kind":"hide","from":293,"to":294,"revealed":false}",
  "{"kind":"hide","from":31,"to":33,"revealed":false}",
  "{"kind":"hide","from":311,"to":312,"revealed":false}",
  "{"kind":"hide","from":328,"to":329,"revealed":false}",
  "{"kind":"hide","from":332,"to":333,"revealed":false}",
  "{"kind":"hide","from":336,"to":337,"revealed":false}",
  "{"kind":"hide","from":340,"to":341,"revealed":false}",
  "{"kind":"hide","from":64,"to":66,"revealed":false}",
  "{"kind":"hide","from":70,"to":72,"revealed":false}",
  "{"kind":"hide","from":74,"to":75,"revealed":false}",
  "{"kind":"hide","from":81,"to":82,"revealed":false}",
  "{"kind":"hide","from":84,"to":86,"revealed":false}",
  "{"kind":"hide","from":92,"to":94,"revealed":false}",
  "{"kind":"hide","from":96,"to":97,"revealed":false}",
  "{"kind":"highlight","from":113,"to":117,"revealed":false}",
  "{"kind":"hr","from":364,"to":367,"revealed":false}",
  "{"kind":"image","from":423,"to":445,"revealed":true,"info":"standalone","source":"pic.png","title":"standalone","placement":"block"}",
  "{"kind":"image","from":454,"to":472,"revealed":false,"info":"img","source":"inline.png","title":"img","placement":"inline"}",
  "{"kind":"image","from":485,"to":492,"revealed":false,"info":"clip","source":"","title":"clip","placement":"inline"}",
  "{"kind":"inlineCode","from":96,"to":109,"revealed":false}",
  "{"kind":"italic","from":74,"to":82,"revealed":false}",
  "{"kind":"link","from":260,"to":287,"revealed":false}",
  "{"kind":"link","from":293,"to":312,"revealed":false}",
  "{"kind":"link","from":328,"to":333,"revealed":false}",
  "{"kind":"link","from":336,"to":341,"revealed":false}",
  "{"kind":"linkIcon","from":260,"to":260,"revealed":false,"info":"external"}",
  "{"kind":"listBullet","from":187,"to":188,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":203,"to":204,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":222,"to":223,"revealed":false,"level":0}",
  "{"kind":"listNumber","from":238,"to":240,"revealed":false,"level":0,"info":"1"}",
  "{"kind":"listNumber","from":247,"to":249,"revealed":false,"level":0,"info":"2"}",
  "{"kind":"mathBlock","from":510,"to":524,"revealed":false,"source":"E = mc^2"}",
  "{"kind":"mathInline","from":538,"to":543,"revealed":false,"source":"a+b"}",
  "{"kind":"media","from":485,"to":508,"revealed":false,"info":"clip","source":"clip.mp4","width":320,"title":"clip"}",
  "{"kind":"properties","from":0,"to":29,"revealed":false,"source":"---\\ntitle: Doc\\ntags: a, b\\n---"}",
  "{"kind":"quoteLine","from":127,"to":127,"revealed":false}",
  "{"kind":"strike","from":84,"to":94,"revealed":false}",
  "{"kind":"table","from":392,"to":421,"revealed":false,"source":"| a | b |\\n| - | - |\\n| 1 | 2 |"}",
  "{"kind":"task","from":189,"to":192,"revealed":false,"checked":true}",
  "{"kind":"task","from":205,"to":208,"revealed":false,"checked":false}",
  "{"kind":"taskDoneText","from":193,"to":202,"revealed":false}",
  "{"kind":"wikiLink","from":292,"to":313,"revealed":false,"info":"Wiki Target","source":"shown"}",
]
`;

exports[`collectDecorations 特征化（拆分护栏） > 光标在代码块内 1`] = `
[
  "{"kind":"bold","from":64,"to":72,"revealed":false}",
  "{"kind":"callout","from":147,"to":185,"revealed":false,"info":"note","source":"callout body","title":"Callout title","folded":false}",
  "{"kind":"codeLine","from":369,"to":369,"revealed":false}",
  "{"kind":"codeLine","from":375,"to":375,"revealed":false}",
  "{"kind":"codeLine","from":387,"to":387,"revealed":false}",
  "{"kind":"footnoteRef","from":328,"to":333,"revealed":false,"info":"footnote definition","source":"fn"}",
  "{"kind":"headingLine","from":31,"to":31,"revealed":false,"level":1}",
  "{"kind":"hide","from":108,"to":109,"revealed":false}",
  "{"kind":"hide","from":111,"to":113,"revealed":false}",
  "{"kind":"hide","from":117,"to":119,"revealed":false}",
  "{"kind":"hide","from":127,"to":128,"revealed":false}",
  "{"kind":"hide","from":187,"to":188,"revealed":false}",
  "{"kind":"hide","from":187,"to":189,"revealed":false}",
  "{"kind":"hide","from":203,"to":204,"revealed":false}",
  "{"kind":"hide","from":203,"to":205,"revealed":false}",
  "{"kind":"hide","from":222,"to":223,"revealed":false}",
  "{"kind":"hide","from":238,"to":240,"revealed":false}",
  "{"kind":"hide","from":247,"to":249,"revealed":false}",
  "{"kind":"hide","from":260,"to":261,"revealed":false}",
  "{"kind":"hide","from":265,"to":266,"revealed":false}",
  "{"kind":"hide","from":266,"to":267,"revealed":false}",
  "{"kind":"hide","from":267,"to":286,"revealed":false}",
  "{"kind":"hide","from":286,"to":287,"revealed":false}",
  "{"kind":"hide","from":293,"to":294,"revealed":false}",
  "{"kind":"hide","from":31,"to":33,"revealed":false}",
  "{"kind":"hide","from":311,"to":312,"revealed":false}",
  "{"kind":"hide","from":328,"to":329,"revealed":false}",
  "{"kind":"hide","from":332,"to":333,"revealed":false}",
  "{"kind":"hide","from":336,"to":337,"revealed":false}",
  "{"kind":"hide","from":340,"to":341,"revealed":false}",
  "{"kind":"hide","from":369,"to":372,"revealed":true}",
  "{"kind":"hide","from":372,"to":374,"revealed":false}",
  "{"kind":"hide","from":387,"to":390,"revealed":true}",
  "{"kind":"hide","from":64,"to":66,"revealed":false}",
  "{"kind":"hide","from":70,"to":72,"revealed":false}",
  "{"kind":"hide","from":74,"to":75,"revealed":false}",
  "{"kind":"hide","from":81,"to":82,"revealed":false}",
  "{"kind":"hide","from":84,"to":86,"revealed":false}",
  "{"kind":"hide","from":92,"to":94,"revealed":false}",
  "{"kind":"hide","from":96,"to":97,"revealed":false}",
  "{"kind":"highlight","from":113,"to":117,"revealed":false}",
  "{"kind":"hr","from":364,"to":367,"revealed":false}",
  "{"kind":"image","from":423,"to":445,"revealed":false,"info":"standalone","source":"pic.png","title":"standalone","placement":"block"}",
  "{"kind":"image","from":454,"to":472,"revealed":false,"info":"img","source":"inline.png","title":"img","placement":"inline"}",
  "{"kind":"image","from":485,"to":492,"revealed":false,"info":"clip","source":"","title":"clip","placement":"inline"}",
  "{"kind":"inlineCode","from":96,"to":109,"revealed":false}",
  "{"kind":"italic","from":74,"to":82,"revealed":false}",
  "{"kind":"link","from":260,"to":287,"revealed":false}",
  "{"kind":"link","from":293,"to":312,"revealed":false}",
  "{"kind":"link","from":328,"to":333,"revealed":false}",
  "{"kind":"link","from":336,"to":341,"revealed":false}",
  "{"kind":"linkIcon","from":260,"to":260,"revealed":false,"info":"external"}",
  "{"kind":"listBullet","from":187,"to":188,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":203,"to":204,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":222,"to":223,"revealed":false,"level":0}",
  "{"kind":"listNumber","from":238,"to":240,"revealed":false,"level":0,"info":"1"}",
  "{"kind":"listNumber","from":247,"to":249,"revealed":false,"level":0,"info":"2"}",
  "{"kind":"mathBlock","from":510,"to":524,"revealed":false,"source":"E = mc^2"}",
  "{"kind":"mathInline","from":538,"to":543,"revealed":false,"source":"a+b"}",
  "{"kind":"media","from":485,"to":508,"revealed":false,"info":"clip","source":"clip.mp4","width":320,"title":"clip"}",
  "{"kind":"properties","from":0,"to":29,"revealed":false,"source":"---\\ntitle: Doc\\ntags: a, b\\n---"}",
  "{"kind":"quoteLine","from":127,"to":127,"revealed":false}",
  "{"kind":"strike","from":84,"to":94,"revealed":false}",
  "{"kind":"table","from":392,"to":421,"revealed":false,"source":"| a | b |\\n| - | - |\\n| 1 | 2 |"}",
  "{"kind":"task","from":189,"to":192,"revealed":false,"checked":true}",
  "{"kind":"task","from":205,"to":208,"revealed":false,"checked":false}",
  "{"kind":"taskDoneText","from":193,"to":202,"revealed":false}",
  "{"kind":"wikiLink","from":292,"to":313,"revealed":false,"info":"Wiki Target","source":"shown"}",
]
`;

exports[`collectDecorations 特征化（拆分护栏） > 光标在正文段落 1`] = `
[
  "{"kind":"bold","from":64,"to":72,"revealed":false}",
  "{"kind":"callout","from":147,"to":185,"revealed":false,"info":"note","source":"callout body","title":"Callout title","folded":false}",
  "{"kind":"codeBlock","from":369,"to":390,"revealed":false,"info":"js","source":"const x = 1"}",
  "{"kind":"footnoteRef","from":328,"to":333,"revealed":false,"info":"footnote definition","source":"fn"}",
  "{"kind":"headingLine","from":31,"to":31,"revealed":false,"level":1}",
  "{"kind":"hide","from":108,"to":109,"revealed":true}",
  "{"kind":"hide","from":127,"to":128,"revealed":false}",
  "{"kind":"hide","from":187,"to":188,"revealed":false}",
  "{"kind":"hide","from":187,"to":189,"revealed":false}",
  "{"kind":"hide","from":203,"to":204,"revealed":false}",
  "{"kind":"hide","from":203,"to":205,"revealed":false}",
  "{"kind":"hide","from":222,"to":223,"revealed":false}",
  "{"kind":"hide","from":238,"to":240,"revealed":false}",
  "{"kind":"hide","from":247,"to":249,"revealed":false}",
  "{"kind":"hide","from":260,"to":261,"revealed":false}",
  "{"kind":"hide","from":265,"to":266,"revealed":false}",
  "{"kind":"hide","from":266,"to":267,"revealed":false}",
  "{"kind":"hide","from":267,"to":286,"revealed":false}",
  "{"kind":"hide","from":286,"to":287,"revealed":false}",
  "{"kind":"hide","from":293,"to":294,"revealed":false}",
  "{"kind":"hide","from":31,"to":33,"revealed":false}",
  "{"kind":"hide","from":311,"to":312,"revealed":false}",
  "{"kind":"hide","from":328,"to":329,"revealed":false}",
  "{"kind":"hide","from":332,"to":333,"revealed":false}",
  "{"kind":"hide","from":336,"to":337,"revealed":false}",
  "{"kind":"hide","from":340,"to":341,"revealed":false}",
  "{"kind":"hide","from":64,"to":66,"revealed":true}",
  "{"kind":"hide","from":70,"to":72,"revealed":true}",
  "{"kind":"hide","from":74,"to":75,"revealed":true}",
  "{"kind":"hide","from":81,"to":82,"revealed":true}",
  "{"kind":"hide","from":84,"to":86,"revealed":true}",
  "{"kind":"hide","from":92,"to":94,"revealed":true}",
  "{"kind":"hide","from":96,"to":97,"revealed":true}",
  "{"kind":"hr","from":364,"to":367,"revealed":false}",
  "{"kind":"image","from":423,"to":445,"revealed":false,"info":"standalone","source":"pic.png","title":"standalone","placement":"block"}",
  "{"kind":"image","from":454,"to":472,"revealed":false,"info":"img","source":"inline.png","title":"img","placement":"inline"}",
  "{"kind":"image","from":485,"to":492,"revealed":false,"info":"clip","source":"","title":"clip","placement":"inline"}",
  "{"kind":"inlineCode","from":96,"to":109,"revealed":false}",
  "{"kind":"italic","from":74,"to":82,"revealed":false}",
  "{"kind":"link","from":260,"to":287,"revealed":false}",
  "{"kind":"link","from":293,"to":312,"revealed":false}",
  "{"kind":"link","from":328,"to":333,"revealed":false}",
  "{"kind":"link","from":336,"to":341,"revealed":false}",
  "{"kind":"linkIcon","from":260,"to":260,"revealed":false,"info":"external"}",
  "{"kind":"listBullet","from":187,"to":188,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":203,"to":204,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":222,"to":223,"revealed":false,"level":0}",
  "{"kind":"listNumber","from":238,"to":240,"revealed":false,"level":0,"info":"1"}",
  "{"kind":"listNumber","from":247,"to":249,"revealed":false,"level":0,"info":"2"}",
  "{"kind":"mathBlock","from":510,"to":524,"revealed":false,"source":"E = mc^2"}",
  "{"kind":"mathInline","from":538,"to":543,"revealed":false,"source":"a+b"}",
  "{"kind":"media","from":485,"to":508,"revealed":false,"info":"clip","source":"clip.mp4","width":320,"title":"clip"}",
  "{"kind":"properties","from":0,"to":29,"revealed":false,"source":"---\\ntitle: Doc\\ntags: a, b\\n---"}",
  "{"kind":"quoteLine","from":127,"to":127,"revealed":false}",
  "{"kind":"strike","from":84,"to":94,"revealed":false}",
  "{"kind":"table","from":392,"to":421,"revealed":false,"source":"| a | b |\\n| - | - |\\n| 1 | 2 |"}",
  "{"kind":"task","from":189,"to":192,"revealed":false,"checked":true}",
  "{"kind":"task","from":205,"to":208,"revealed":false,"checked":false}",
  "{"kind":"taskDoneText","from":193,"to":202,"revealed":false}",
  "{"kind":"wikiLink","from":292,"to":313,"revealed":false,"info":"Wiki Target","source":"shown"}",
]
`;

exports[`collectDecorations 特征化（拆分护栏） > 光标在表格内 1`] = `
[
  "{"kind":"bold","from":64,"to":72,"revealed":false}",
  "{"kind":"callout","from":147,"to":185,"revealed":false,"info":"note","source":"callout body","title":"Callout title","folded":false}",
  "{"kind":"codeBlock","from":369,"to":390,"revealed":false,"info":"js","source":"const x = 1"}",
  "{"kind":"footnoteRef","from":328,"to":333,"revealed":false,"info":"footnote definition","source":"fn"}",
  "{"kind":"headingLine","from":31,"to":31,"revealed":false,"level":1}",
  "{"kind":"hide","from":108,"to":109,"revealed":false}",
  "{"kind":"hide","from":111,"to":113,"revealed":false}",
  "{"kind":"hide","from":117,"to":119,"revealed":false}",
  "{"kind":"hide","from":127,"to":128,"revealed":false}",
  "{"kind":"hide","from":187,"to":188,"revealed":false}",
  "{"kind":"hide","from":187,"to":189,"revealed":false}",
  "{"kind":"hide","from":203,"to":204,"revealed":false}",
  "{"kind":"hide","from":203,"to":205,"revealed":false}",
  "{"kind":"hide","from":222,"to":223,"revealed":false}",
  "{"kind":"hide","from":238,"to":240,"revealed":false}",
  "{"kind":"hide","from":247,"to":249,"revealed":false}",
  "{"kind":"hide","from":260,"to":261,"revealed":false}",
  "{"kind":"hide","from":265,"to":266,"revealed":false}",
  "{"kind":"hide","from":266,"to":267,"revealed":false}",
  "{"kind":"hide","from":267,"to":286,"revealed":false}",
  "{"kind":"hide","from":286,"to":287,"revealed":false}",
  "{"kind":"hide","from":293,"to":294,"revealed":false}",
  "{"kind":"hide","from":31,"to":33,"revealed":false}",
  "{"kind":"hide","from":311,"to":312,"revealed":false}",
  "{"kind":"hide","from":328,"to":329,"revealed":false}",
  "{"kind":"hide","from":332,"to":333,"revealed":false}",
  "{"kind":"hide","from":336,"to":337,"revealed":false}",
  "{"kind":"hide","from":340,"to":341,"revealed":false}",
  "{"kind":"hide","from":64,"to":66,"revealed":false}",
  "{"kind":"hide","from":70,"to":72,"revealed":false}",
  "{"kind":"hide","from":74,"to":75,"revealed":false}",
  "{"kind":"hide","from":81,"to":82,"revealed":false}",
  "{"kind":"hide","from":84,"to":86,"revealed":false}",
  "{"kind":"hide","from":92,"to":94,"revealed":false}",
  "{"kind":"hide","from":96,"to":97,"revealed":false}",
  "{"kind":"highlight","from":113,"to":117,"revealed":false}",
  "{"kind":"hr","from":364,"to":367,"revealed":false}",
  "{"kind":"image","from":423,"to":445,"revealed":false,"info":"standalone","source":"pic.png","title":"standalone","placement":"block"}",
  "{"kind":"image","from":454,"to":472,"revealed":false,"info":"img","source":"inline.png","title":"img","placement":"inline"}",
  "{"kind":"image","from":485,"to":492,"revealed":false,"info":"clip","source":"","title":"clip","placement":"inline"}",
  "{"kind":"inlineCode","from":96,"to":109,"revealed":false}",
  "{"kind":"italic","from":74,"to":82,"revealed":false}",
  "{"kind":"link","from":260,"to":287,"revealed":false}",
  "{"kind":"link","from":293,"to":312,"revealed":false}",
  "{"kind":"link","from":328,"to":333,"revealed":false}",
  "{"kind":"link","from":336,"to":341,"revealed":false}",
  "{"kind":"linkIcon","from":260,"to":260,"revealed":false,"info":"external"}",
  "{"kind":"listBullet","from":187,"to":188,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":203,"to":204,"revealed":false,"level":0}",
  "{"kind":"listBullet","from":222,"to":223,"revealed":false,"level":0}",
  "{"kind":"listNumber","from":238,"to":240,"revealed":false,"level":0,"info":"1"}",
  "{"kind":"listNumber","from":247,"to":249,"revealed":false,"level":0,"info":"2"}",
  "{"kind":"mathBlock","from":510,"to":524,"revealed":false,"source":"E = mc^2"}",
  "{"kind":"mathInline","from":538,"to":543,"revealed":false,"source":"a+b"}",
  "{"kind":"media","from":485,"to":508,"revealed":false,"info":"clip","source":"clip.mp4","width":320,"title":"clip"}",
  "{"kind":"properties","from":0,"to":29,"revealed":false,"source":"---\\ntitle: Doc\\ntags: a, b\\n---"}",
  "{"kind":"quoteLine","from":127,"to":127,"revealed":false}",
  "{"kind":"strike","from":84,"to":94,"revealed":false}",
  "{"kind":"task","from":189,"to":192,"revealed":false,"checked":true}",
  "{"kind":"task","from":205,"to":208,"revealed":false,"checked":false}",
  "{"kind":"taskDoneText","from":193,"to":202,"revealed":false}",
  "{"kind":"wikiLink","from":292,"to":313,"revealed":false,"info":"Wiki Target","source":"shown"}",
]
`;
